# webgpu-example

./: .gitmodules  App.cpp  App.hpp  CMakeLists.txt  CMakePresets.json  README.md  glfw3webgpu.cpp  glfw3webgpu.hpp  main.cpp  webgpu-utils.cpp  webgpu-utils.hpp  webgputypes.hpp
submodules/: CMakeLists.txt  dawn.cmake  webgpu_emscripten.cmake  wgpu.cmake
